add books detail

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
-
+    "pages/books/books",
     "pages/classic/classic",
-    "pages/books/books"
+    "pages/book-detail/bookDetail"
   ],
   "window": {
     "backgroundTextStyle": "light",
