--- a/project.config.json
+++ b/project.config.json
@@ -33,13 +33,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "book-d",
 					"pathName": "pages/book-detail/bookDetail",
 					"query": "bookId=1120"
+				},
+				{
+					"id": -1,
+					"name": "books",
+					"pathName": "pages/books/books"
 				}
 			]
 		}
