--- a/project.config.json
+++ b/project.config.json
@@ -42,9 +42,10 @@
 					"query": "bookId=1120"
 				},
 				{
-					"id": -1,
+					"id": 1,
 					"name": "books",
-					"pathName": "pages/books/books"
+					"pathName": "pages/books/books",
+					"query": ""
 				}
 			]
 		}
